@@ -109,6 +109,25 @@ Affiliation: Free Software Foundation.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00007.html">http://mail.gnome.org/archives/foundation-announce/2002-October/msg00007.html</a>
 </P>
 
+<P>3. MIGUEL DE ICAZA<br />
+&quot;
+Have been an active contributor to the free software movement
+since 1992.
+<br />
+Started the GNOME project when various freedom issues arised
+that would threaten the future of a fully free system.  
+<br />
+I am one of the founders of Ximian, one of the GNOME
+companies, where we employ around 40 GNOME hackers that
+develop free software. 
+<br />
+Have been actively involved for the past year in the
+development of Mono and the Gtk bindings for C#.
+&quot;<br />
+Affiliation: Ximian.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00008.html">http://mail.gnome.org/archives/foundation-announce/2002-October/msg00008.html</a>
+</P>
+
 <center>
 <P>
 <BR><BR>
