@@ -1,5 +1,9 @@
 2002-10-30  Vincent Untz  <vincent@vuntz.net>
 
+	* ballot-summary.html: third candidate.
+
+2002-10-30  Vincent Untz  <vincent@vuntz.net>
+
 	* ballot-summary.html: first two candidates.
 
 2002-10-29  Glynn Foster  <glynn.foster@sun.com>
